--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,8 +545,8 @@ blockquote.text-white cite span {
 
 .logo img {
     display: block;
-    max-width: 100%;
-    height: auto
+    max-width: 174px;
+    height: 91px;
 }
 
 .header-top {
